@@ -1,4 +1,4 @@
 DIST JapaneseVocabulary-0.6-src.tar.gz 157552 RMD160 b5d36792a763bc5326ac76081fd9850ea22dcc4d SHA1 b0af15d0d41dcf1e08c345252ae62ea436934800 SHA256 aeb7838739b1769ade7bf9df07eb16548e1113ba573bd63d90460630c25e37bb
-EBUILD japanese-vocabulary-0.6.ebuild 1107 RMD160 63f5471ec5afff1df8fbdd68534e52299a71a49a SHA1 58e1ad66bc4447c6e3a1215808a96d64a679fbc4 SHA256 1459b2b7bf35daf8fb93391c40707ebeeddfe64b7b22b9ee0ff3c866c8548a22
-MISC ChangeLog 1364 RMD160 2eae8000721286b10dd9ce94f35c2fd7114738b1 SHA1 4b125bf3275727b8906706553ef1e07982141e9e SHA256 ea87109059b4212226736487801d0137279baaba959f7eb300e711ec616fa3e6
+EBUILD japanese-vocabulary-0.6.ebuild 1067 RMD160 bf99034637f412a68e0381fa1023503041d0d726 SHA1 ffd9ca7f869b9502fef8fa17d3b62e21a5868696 SHA256 86b73b8546835bc56a9e26d953a495b3177bc1f8e1801a0ea564f03a47622f69
+MISC ChangeLog 1479 RMD160 367f38768a26b198388cafc2229957741fd707be SHA1 6f4d19e436cce6661180d8609470c3c18b14910f SHA256 05aa7ee98014ede5d4508f8aa5216b03ac28cfd14f8dce65bcebf2fd51a93869
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
