@@ -1,9 +1,9 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI="2"
-inherit eutils qt4 toolchain-funcs
+inherit eutils qt4-r2 toolchain-funcs
 
 KEYWORDS="~x86"
 
@@ -21,10 +21,6 @@ DEPEND="x11-libs/qt-gui:4
 RDEPEND="${DEPEND}"
 
 S=${WORKDIR}/${PN}
-
-src_configure() {
-	eqmake4 ${MY_PN}.pro
-}
 
 src_install() {
 	dobin ${MY_PN}
